[package]
name = "unimoji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.29.1", features = ["full"] }
futures-util = "0.3.28"
spidev = "0.5.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
image = "0.24.6"
toml = "0.7.6"

