[package]
name = "unimoji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
futures-util = "0.3.28"
image = "0.24.6"
log = "0.4"
reqwest = { version = "0.11.18", features = ["stream"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
spidev = "0.5.2"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"

